--- a/templates/guest-details.html
+++ b/templates/guest-details.html
@@ -410,6 +410,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase-client.js"></script>
     <script src="../js/auth-guard.js"></script>
+    <script src="../js/hotel-api.js"></script>
     <script src="../js/main.js"></script>
 
     <script>
