--- a/templates/payment.html
+++ b/templates/payment.html
@@ -251,6 +251,17 @@
         </div>
     </header>
 
+    <!-- Breadcrumb -->
+    <nav class="breadcrumb-nav">
+        <div class="container">
+            <a href="index.html">Home</a>
+            <i class="fas fa-chevron-right separator"></i>
+            <a href="hotel-booking.html">Hotels</a>
+            <i class="fas fa-chevron-right separator"></i>
+            <span class="current">Payment</span>
+        </div>
+    </nav>
+
     <div class="checkout-container">
         <!-- Booking Progress -->
         <div
