--- a/templates/hotel-details.html
+++ b/templates/hotel-details.html
@@ -19,6 +19,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/hotel-booking.css">
     <link rel="stylesheet" href="../css/hotel-details-expedia.css">
     <link rel="stylesheet" href="../css/expedia-design-system.css">
